--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,14 @@
 .logo {
 	max-width: 100px;
 }
+.nav-link {
+	font-size: 1.2rem;
+}
+.navbar-toggler,
+.fa-delicious {
+	color: orange;
+}
+.neg-mar {
+	height: 100%;
+	margin-top: -4rem;
+}
